<resources>
    <string name="app_name">FireBaseS9</string>
    <string name="valbtnregister">REGISTER</string>
    <string name="valetfullname">Ingrese nombre completo</string>
    <string name="valetcountry">Ingrese el país\n</string>
    <string name="valetemail">Ingrese el correo</string>
    <string name="valetpassword">Ingrese contraseña</string>
    <string name="valbtnsaveregister">SAVE</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_product">Product</string>
    <string name="menu_register">Register</string>
    <string name="menu_animals">Animals</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valtitleSearchProduct">Buscar Producto</string>
    <string name="menu_product_api">Product API</string>
</resources>